# petal

./: .gitignore  .pre-commit-config.yaml  AGENT_API.md  API_SPEC.md  CHECKPOINTER_PLAN.md  CODE_REVIEW_FEEDBACK.md  GIT_WORKFLOW.md  Makefile  PLANNING.md  README.md  REFACTORING_TODOS.md  TODOS.md  TOOL_REGISTRY_REQS.md  YAML_NODE_IMPLEMENTATION.md  current_tasking.md  debug_folder_discovery.py  debug_state.py  demo_structured_output.py  pyproject.toml  test_factory_debug.py  test_langgraph_debug.py  test_langgraph_simple.py
.cursor/rules/: code-words.mdc  git-commit.mdc  my-stack.mdc  project-rules.mdc  workflow-preferences.mdc
.github/workflows/: ci.yml
data/: conversations.db-shm  conversations.db-wal  test_conversations.db-shm  test_conversations.db-wal
docs/notes/: order.md
docs/source/: architecture.rst  conf.py  contributing.rst  getting_started.rst  index.rst
docs/source/api/: agent_builder.rst  agent_factory.rst  decorators.rst  graph_factory.rst  index.rst  registry.rst  tool_factory.rst  types.rst
docs/source/examples/: basic_agent.rst  custom_tools.rst  graph_workflows.rst  index.rst  memory_management.rst  tool_integration.rst  yaml_configuration.rst
docs/source/migration/: yaml_migration.rst
docs/source/troubleshooting/: yaml_issues.rst
examples/: checkpointer_conversation_demo.py  checkpointer_demo.py  config_discovery_demo.py  debug_graph.py  diagram_demo.py  improved_api_demo.py  inspire_agent.py  llm_types_demo.py  mcp_tool_registry_playground.py  ollama_demo.py  playground.py  playground2.py  playground3.py  react_agent_framework_playground.py  react_agent_playground.py  test_main_module.py  yaml_config_demo.py  yaml_loader_playground.py
examples/yaml/: README.md  complex_node.yaml  custom_node.yaml  llm_node.yaml  react_node.yaml
scripts/: check_coverage.py  setup_dev.py
src/petal/: __init__.py
src/petal/core/: __init__.py  agent.py  decorators.py  factory.py  registry.py  tool_factory.py
src/petal/core/builders/: __init__.py  agent.py  director.py  react.py
src/petal/core/builders/handlers/: __init__.py  base.py  custom.py  llm.py
src/petal/core/config/: __init__.py  agent.py  checkpointer.py  llm_types.py  state.py  yaml.py
src/petal/core/discovery/: __init__.py  config.py  decorator.py  folder.py  module_cache.py
src/petal/core/plugins/: __init__.py  base.py
src/petal/core/steps/: __init__.py  base.py  custom.py  llm.py  react.py  registry.py  tool.py
src/petal/core/yaml/: parser.py
src/petal/core/yaml/handlers/: __init__.py  base.py  custom.py  factory.py  llm.py  react.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: mcp_server_script.py  sample_tools.py  test_functions.py
tests/integration/: test_yaml_loading.py
tests/petal/: conftest_factory.py  test_builders_agent.py  test_builders_director.py  test_builders_handlers.py  test_checkpointer_config.py  test_checkpointer_integration.py  test_config_agent.py  test_config_discovery.py  test_config_state.py  test_config_yaml.py  test_decorator_discovery.py  test_decorators.py  test_factory.py  test_factory_chat.py  test_factory_core.py  test_factory_diagrams.py  test_factory_llm_steps.py  test_factory_prompts.py  test_factory_react.py  test_factory_registry.py  test_factory_tools.py  test_factory_yaml.py  test_folder_discovery.py  test_init.py  test_llm_types.py  test_ollama_integration.py  test_plugins.py  test_react_builder.py  test_react_step.py  test_registry.py  test_steps_base.py  test_steps_custom.py  test_steps_llm.py  test_steps_registry.py  test_steps_tool.py  test_tool_factory.py  test_yaml_handlers.py  test_yaml_parser.py  test_yaml_tool_discovery.py
